# chatgpt_client

./: CMakeLists.txt  README.md  build.sh
samples/: CMakeLists.txt
samples/bing_client/: main.cpp
samples/chatgpt_client/: main.cpp
src/: co_helper.hpp  co_http_client.cpp  co_http_client.hpp  http_client.cpp  http_client.hpp  main.cpp
tests/: main.cpp
